--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node dist/server.js",
     "build": "rimraf dist && tsc",
     "build:add": "git add dist -f",
+    "lint": "eslint . --ext .js,.ts",
+    "lint:fix": "eslint --fix . --ext .js,.ts",
     "ts:check": "tsc --project tsconfig.json",
     "prisma:migrate": "prisma migrate dev"
   },
@@ -15,7 +17,6 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.13.0",
-    "@types/express-fileupload": "^1.5.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
@@ -31,6 +32,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.5.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.8",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
