feat: Add base url and change paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,14 @@
     "esModuleInterop": true,
     "strict": true,
     "sourceMap": true,
+    "baseUrl": ".",
     "lib": [
       "esnext"
     ],
     "outDir": "dist",
     "paths": {
       "@/*": [
-        "./src/*"
+        "src/*"
       ]
     }
   }
