--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
